<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:backgroundTint="#DADADA"
    android:elevation="4dp"
    app:cardCornerRadius="8dp">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:id="@+id/wineName1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#121212"
            android:textStyle="bold"
            tools:text="@tools:sample/full_names" />

        <TextView
            android:id="@+id/wineColor1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/color"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#121212"
            tools:text="@tools:sample/full_names" />

        <TextView
            android:id="@+id/grapes1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/featured_grapes"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#121212"
            tools:text="@tools:sample/full_names" />

        <TextView
            android:id="@+id/wineRegion1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wine_region"
            android:padding="5dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#121212"
            tools:text="@tools:sample/full_names" />

        <TextView
            android:id="@+id/producer1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wine_producer"
            android:padding="5dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#121212"
            tools:text="@tools:sample/full_names" />

        <TextView
            android:id="@+id/priceRange1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/price_range"
            android:padding="5dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#121212"
            tools:text="@tools:sample/full_names" />

        <TextView
            android:id="@+id/lifespan1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lifespan"
            android:padding="5dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#121212"
            tools:text="@tools:sample/full_names" />

        <TextView
            android:id="@+id/drinkingTemperature1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/optimal_drinking_temperature"
            android:padding="5dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#121212"
            tools:text="@tools:sample/full_names" />

        <TextView
            android:id="@+id/wineDescription1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wine_description"
            android:padding="5dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#121212"
            tools:text="@tools:sample/full_names" />

        <TextView
            android:id="@+id/tasteTags1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/potential_taste_tags"
            android:padding="5dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#121212"
            tools:text="@tools:sample/full_names" />

        <TextView
            android:id="@+id/eventTags1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/potential_event_pairing"
            android:padding="5dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#121212"
            tools:text="@tools:sample/full_names" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.cardview.widget.CardView>